--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,6 @@ buildscript {
     dependencies {
         classpath 'org.wisepersist:gwt-gradle-plugin:1.0.9'
         
-
     }
 }
 
@@ -69,7 +68,8 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx-bullet:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
         api "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
-        
+        compile 'com.googlecode.json-simple:json-simple:1.1.1'
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
     }
 }
 
